test/files/neg/unchecked-knowable.check
unchecked-knowable.scala:18: error: fruitless type test: a value of type Bippy cannot also be a A1
  /*   warn */ (new Bippy).isInstanceOf[A1]
                                       ^
unchecked-knowable.scala:19: error: fruitless type test: a value of type Bippy cannot also be a B1
  /*   warn */ (new Bippy).isInstanceOf[B1]
                                       ^
two errors found
